# Mu

./: .gitmodules  CMakeLists.txt  README.md  test.lua  test_file.lua
docs/: gui_notes.txt  lua_notes.txt  terminal_notes.txt
fractal/: CMakeLists.txt
fractal/include/: fractal.h
fractal/src/: fractal.cpp
include/: application.h  config.h  editor.h  editor_layer.h  explorer_widget.h  log.h  log_widget.h  logger_widget.h  menu.h  project.h  setup_layer.h  terminal.h  terminal_widget.h  widget.h  widget_layer.h
libs/lua-5.4.4/: CMakeLists.txt
lua-5.4.4/: CMakeLists.txt
mu/: CMakeLists.txt
mu/include/: application.h  config.h.in  entry_point.h  event.h  file.h  file_dialogs.h  glfw_window.h  imgui_layer.h  keyboard_event.h  layer.h  log.h  mouse_event.h  mu.h  platform.h  renderer_commands.h  script_handler.h  texture.h  utility.h  window.h  window_event.h
mu/libs/glad/include/glad/: glad.h
mu/libs/glad/src/: glad.c
mu/src/: application.cpp  file.cpp  file_dialogs.cpp  glfw_window.cpp  imgui_layer.cpp  layer.cpp  log.cpp  renderer_commands.cpp  script_handler.cpp  texture.cpp  utility.cpp  window.cpp
polaris/: CMakeLists.txt
polaris/include/: polaris.h
polaris/src/: polaris.cpp
src/: application.cpp  editor.cpp  editor_layer.cpp  entry_point.cpp  explorer_widget.cpp  log.cpp  log_widget.cpp  logger_widget.cpp  main.cpp  menu.cpp  project.cpp  setup_layer.cpp  terminal.cpp  terminal_widget.cpp  texture.cpp  widget_layer.cpp
